--- a/package.json
+++ b/package.json
@@ -11,5 +11,6 @@
 		"type": "git",
 		"url": "https://github.com/freeCodeCamp/boilerplate-npm.git"
 	},
+	"version": "1.0.0",
 	"author": "Ayinsakia Jacob"
 }
